# dot-test

./: CMakeLists.txt  model.pt
src/: main.cpp
